# py3exiv2-pb11

./: CHANGELOG  MANIFEST.in  README.md  pyproject.toml  setup.py
pyexiv2/: __init__.py  exif.py  exiv2wrapper.cpp  exiv2wrapper.hpp  exiv2wrapper_python.cpp  iptc.py  metadata.py  preview.py  utils.py  xmp.py
test/: TestsRunner.py  test_datetimeformatter.py  test_exif.py  test_iptc.py  test_metadata.py  test_pickling.py  test_readmetadatatestcase.py  test_usercomment.py  test_xmp.py
